--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
